# Assignment2

./: README.md  assignment_2_genAiuse.txt  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
examples/: ealstic_critical_load.ipynb  example1.py  in_class_example1.py  in_class_example2.py  linear_example1.py  linear_example2.py  non_linear_example1.ipynb  non_linear_example2.ipynb  problem2.py  problem3.py
grad_problems/: problem1.py  problem2.py  problem3.py
src/msa/: __init__.py  base_classes.py  functions.py
tests/: test_msa.py
