[project]
name = "msa"
version = "0.1.0"
description = "Matrix Structural Analysis library"
authors = [ { name = "Tianyan Xu", email = "xuty@bu.edu" } ]
readme = "README.md"
requires-python = ">=3.7"
license = { file="LICENSE" }
dependencies = [
    "numpy",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 显式声明包位置
packages = ["msa"]

[tool.setuptools.package-dir]
msa = "src/msa"
